Fixed some layout issues

--- a/backend/styles/signup.module.css
+++ b/backend/styles/signup.module.css
@@ -1,49 +1,24 @@
-/* Signup */
-div.signup {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	overflow: auto;
-}
-
-div.signup .signupFormTitle {
-	text-align: center;
-	text-transform: none;
-	color: #121212;
-}
-
-div.signup div.signupTos {
-	margin-top: 10px;
-}
-
-
 
 @media only screen and (max-width: 960px) {
-	div.signup .signupForm {
+	.signupForm {
 		margin: 45px 0 20px calc(50% - 175px);
 		width: 350px;
 		padding: 30px;
-	}
-
-	div.signup .recaptcha {
-		margin-top: 25px;
-		margin-left: -10px;
 	}
 }
 
 
 
 @media only screen and (min-width: 960px) {
-	div.signup .signupForm {
+	.signupForm {
 		margin: 45px 0 20px calc(50% - 275px);
 		width: 550px;
 		padding: 30px;
 	}
+}
 
-	div.signup .recaptcha {
-		margin-top: 25px;
-		margin-left: 85px;
-	}
+.signupForm .signupFormTitle {
+	text-align: center;
+	text-transform: none;
+	color: #121212;
 }
